--- a/package.json
+++ b/package.json
@@ -4,21 +4,17 @@
   "private": true,
   "author": "草鞋没号 <308487730@qq.com>",
   "license": "MIT",
-  "main": "dist-electron/main.js",
+  "main": "dist-electron/index.js",
   "scripts": {
     "dev": "nuxi dev",
     "build": "nuxi build --prerender && electron-builder"
   },
-  "dependencies": {
-    "@171h/log": "^2.2.0"
-  },
   "devDependencies": {
-    "@types/node": "^20.4.5",
-    "electron": "^25.3.2",
-    "electron-builder": "^24.6.3",
-    "nuxt": "^3.6.5",
-    "nuxt-electron": "^0.4.5",
-    "vite-electron-plugin": "^0.8.2",
+    "@171h/log": "^2.2.0",
+    "electron": "^25.3.0",
+    "electron-builder": "^24.4.0",
+    "nuxt": "^3.6.3",
+    "nuxt-electron": "0.6.0",
     "vite-plugin-electron-renderer": "^0.14.5"
   }
 }
