--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "lint": "pnpm eslint .",
     "lint:fix": "pnpm eslint . --fix"
   },
+  "dependencies": {
+    "adm-zip": "^0.5.10"
+  },
   "devDependencies": {
     "@171h/log": "^2.2.0",
     "@antfu/eslint-config": "^0.40.0",
+    "@types/adm-zip": "^0.5.0",
     "electron": "^25.3.2",
     "electron-builder": "^24.6.3",
     "nuxt": "^3.6.5",
